--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-python-telegram-bot>=20.0
-requests>=2.25.0
-aiohttp>=3.8.1
+python-telegram-bot==20.7          # Telegram Bot API (v20+)
+requests>=2.31.0                   # Для HTTP-запросов (Rebrickable, BrickEconomy)
+psycopg2-binary>=2.9.9             # PostgreSQL клиент (binary - упрощённая сборка)
+apscheduler>=3.10.4                # Планировщик задач (для рассылки по пятницам)
+aiohttp>=3.9.1                     # Async HTTP клиент (для GA трекинга)
